--- a/test/BUILD.bazel
+++ b/test/BUILD.bazel
@@ -8,7 +8,7 @@ load(
 )
 
 BINARY_DIR = "/tmp"
-SOURCE_DIR = "/tmp"
+SOURCE_DIR = "./ign_gui"
 CMAKE_BINARY_DIR = "./ign_gui/test"
 IGNITION_TOOLS_BINARY_DIRS = "/tmp"
 PROJECT_NAME = "ignition-gui"
@@ -69,3 +69,39 @@ qt_cc_binary(
     includes = ["."],
     visibility = ["//visibility:public"]
 )
+
+cc_binary(
+    name = "libTestBadInheritancePlugin.so",
+    srcs = ["plugins/TestBadInheritancePlugin.cc",
+            "plugins/TestBadInheritancePlugin.hh"],
+    linkshared = True,
+    linkopts = [],
+    includes = ["."],
+    visibility = ["//visibility:public"],
+    deps = [
+        "//ign_common",
+        "//ign_plugin/register",
+        "//ign_gui",
+    ],
+)
+
+cc_binary(
+    name = "libTestNotRegisteredPlugin.so",
+    srcs = ["plugins/TestNotRegisteredPlugin.cc",
+              "plugins/TestNotRegisteredPlugin.hh"],
+    linkshared = True,
+    linkopts = [],
+    includes = ["."],
+    visibility = ["//visibility:public"],
+    deps = [
+        "//ign_common",
+        "//ign_plugin/register",
+        "//ign_gui",
+    ],
+)
+
+exports_files([
+    "config/ignore.config",
+    "config/plugins_menu.config",
+    "config/state.config",
+    "config/test.config"])
