--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -183,7 +183,10 @@ cc_library(
         "//ign_common",
         "//ign_common/events:events",
         "//ign_gui/test:test_utils",
-        "//ign_gui/test:libTestPlugin.so",
+        "//ign_gui/test:TestPlugin.so",
+        "//ign_gui/test:TestBadInheritancePlugin.so",
+        "//ign_gui/test:TestNotRegisteredPlugin.so",
+        "//ign_gui/src/plugins:Publisher.so",
         "@gtest//:gtest",
         "@gtest//:gtest_main",
         "@qt//:qt_core",
