Reincorporate Scene3d plugin in looped definition
Signed-off-by: Michael Carroll <michael@openrobotics.org>

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -205,6 +205,7 @@ cc_binary(
     srcs = [
         "examples/standalone/window/window.cc",
     ],
+    linkopts = ["-ltinyxml2"],
     deps = [
         ":ign_gui",
         "//ign_gui/src/plugins:libScene3D.so",
