--- a/examples/config/plugin_params.config
+++ b/examples/config/plugin_params.config
@@ -50,3 +50,13 @@
   </ignition-gui>
 </plugin>
 
+<plugin filename="Publisher">
+  <ignition-gui>
+    <title>Collapsed publisher</title>
+    <property key="width" type="double">250</property>
+    <property key="height" type="double">50</property>
+    <property key="state" type="string">docked_collapsed</property>
+    <property key="showCollapseButton" type="bool">true</property>
+    <property key="showTitleBar" type="bool">true</property>
+  </ignition-gui>
+</plugin>
