--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -108,5 +108,6 @@ add_subdirectory(key_publisher)
 add_subdirectory(publisher)
 add_subdirectory(scene3d)
 add_subdirectory(topic_echo)
+add_subdirectory(topic_viewer)
 add_subdirectory(world_control)
 add_subdirectory(world_stats)
