--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -105,6 +105,7 @@ endfunction()
 add_subdirectory(grid_3d)
 add_subdirectory(image_display)
 add_subdirectory(key_publisher)
+add_subdirectory(plotting)
 add_subdirectory(publisher)
 add_subdirectory(scene3d)
 add_subdirectory(topic_echo)
