--- a/api.md.in
+++ b/api.md.in
@@ -1,7 +1,7 @@
 ## Ignition @IGN_DESIGNATION_CAP@
 
-Ignition @IGN_DESIGNATION_CAP@ is a component in Ignition Robotics, a set of libraries
-designed to rapidly develop robot and simulation applications. 
+Ignition @IGN_DESIGNATION_CAP@ is a component in Ignition, a set of libraries
+designed to rapidly develop robot and simulation applications.
 
 ## License
 
