--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,6 +18,7 @@ set (gtest_sources
   Conversions_TEST
   DragDropModel_TEST
   Helpers_TEST
+  GuiEvents_TEST
   ign_TEST
   MainWindow_TEST
   Plugin_TEST
