--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -107,6 +107,7 @@ add_subdirectory(image_display)
 add_subdirectory(key_publisher)
 add_subdirectory(publisher)
 add_subdirectory(scene3d)
+add_subdirectory(screenshot)
 add_subdirectory(topic_echo)
 add_subdirectory(topic_viewer)
 add_subdirectory(world_control)
