--- a/examples/config/scene3d.config
+++ b/examples/config/scene3d.config
@@ -17,6 +17,10 @@
     <background_color>0.8 0.8 0.8</background_color>
     <camera_pose>-6 0 6 0 0.5 0</camera_pose>
 </plugin>
+<plugin filename="Grid3D" name="3D Grid">
+  <engine>ogre</engine>
+  <scene>scene</scene>
+</plugin>
 <!-- TODO(anyone) Support multiple scenes in the same window
   plugin filename="Scene3D">
     <title>View 2</title>
