--- a/src/plugins/screenshot/CMakeLists.txt
+++ b/src/plugins/screenshot/CMakeLists.txt
@@ -4,5 +4,7 @@ ign_gui_add_plugin(Screenshot
   QT_HEADERS
     Screenshot.hh
   PUBLIC_LINK_LIBS
-   ignition-rendering${IGN_RENDERING_VER}::ignition-rendering${IGN_RENDERING_VER}
+    ignition-rendering${IGN_RENDERING_VER}::ignition-rendering${IGN_RENDERING_VER}
+  TEST_SOURCES
+    Screenshot_TEST.cc
 )
