Added origin axes config plugin
Signed-off-by: ahcorde <ahcorde@gmail.com>

--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -102,6 +102,7 @@ function(ign_gui_add_plugin plugin_name)
 endfunction()
 
 # Plugins
+add_subdirectory(axes)
 add_subdirectory(grid_3d)
 add_subdirectory(image_display)
 add_subdirectory(key_publisher)
