fixed tutorial image syntax
Signed-off-by: Jenn Nguyen <jenn@openrobotics.org>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,3 +118,5 @@ ign_create_docs(
    \"${IGNITION-TRANSPORT_DOXYGEN_TAGFILE} = ${IGNITION-TRANSPORT_API_URL}\" \
    \"${IGNITION-COMMON_DOXYGEN_TAGFILE} = ${IGNITION-COMMON_API_URL}\""
   )
+
+file(COPY ${CMAKE_SOURCE_DIR}/tutorials/images/ DESTINATION ${CMAKE_BINARY_DIR}/doxygen/html/images/)
