--- a/tutorials.md.in
+++ b/tutorials.md.in
@@ -14,6 +14,7 @@ Ignition @IGN_DESIGNATION_CAP@ library and how to use the library effectively.
 5. \subpage layout "Layout"
 6. \subpage style "Style"
 7. \subpage examples "Examples"
+8. \subpage screenshot "Screenshot"
 
 ## License
 
