Consolidate Scene3D with ign-gazebo's GzScene3D
Signed-off-by: ahcorde <ahcorde@gmail.com>

--- a/include/ignition/gui/CMakeLists.txt
+++ b/include/ignition/gui/CMakeLists.txt
@@ -59,6 +59,7 @@ target_link_libraries(${PROJECT_LIBRARY_TARGET_NAME}
     ${IGNITION-MSGS_LIBRARIES}
     ignition-plugin${IGN_PLUGIN_VER}::loader
     ${IGNITION-TRANSPORT_LIBRARIES}
+    ${IGNITION-RENDERING_LIBRARIES}
     ${Qt5Core_LIBRARIES}
     ${Qt5Qml_LIBRARIES}
     ${Qt5Quick_LIBRARIES}
