--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,11 @@ set (sources
   ${CMAKE_CURRENT_SOURCE_DIR}/MainWindow.cc
   ${CMAKE_CURRENT_SOURCE_DIR}/PlottingInterface.cc
   ${CMAKE_CURRENT_SOURCE_DIR}/Plugin.cc
+  ${CMAKE_CURRENT_SOURCE_DIR}/Scene3D/Scene3DInterface.cc
+  ${CMAKE_CURRENT_SOURCE_DIR}/Scene3D/RenderWindow.cc
+  ${CMAKE_CURRENT_SOURCE_DIR}/Scene3D/SceneManager.cc
+  ${CMAKE_CURRENT_SOURCE_DIR}/Scene3D/IgnRenderer.cc
+  ${CMAKE_CURRENT_SOURCE_DIR}/Scene3D/TextureNode.cc
   ${CMAKE_CURRENT_SOURCE_DIR}/SearchModel.cc
   PARENT_SCOPE
 )
