--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -120,6 +120,7 @@ add_subdirectory(key_publisher)
 add_subdirectory(plotting)
 add_subdirectory(publisher)
 add_subdirectory(scene3d)
+add_subdirectory(scene3d_new)
 add_subdirectory(screenshot)
 add_subdirectory(topic_echo)
 add_subdirectory(topic_viewer)
