--- a/test/integration/CMakeLists.txt
+++ b/test/integration/CMakeLists.txt
@@ -1,3 +1,8 @@
 ign_get_sources(tests)
 
-ign_build_tests(TYPE INTEGRATION SOURCES ${tests})
+ign_build_tests(
+  TYPE INTEGRATION
+  SOURCES ${tests}
+  LIB_DEPS
+    ignition-plugin${IGN_PLUGIN_VER}::loader
+    ignition-rendering${IGN_RENDERING_VER}::ignition-rendering${IGN_RENDERING_VER})
