Split transport scene manager into a plugin outside Scene3D
Signed-off-by: Louise Poubel <louise@openrobotics.org>

--- a/examples/config/scene3d.config
+++ b/examples/config/scene3d.config
@@ -15,9 +15,11 @@
     <background_color>0.8 0.8 0.8</background_color>
     <camera_pose>-6 0 6 0 0.5 0</camera_pose>
 </plugin>
-<plugin filename="Grid3D" name="3D Grid">
-  <engine>ogre</engine>
-  <scene>scene</scene>
+<plugin filename="TransportSceneManager" name="Transport Scene Manager">
+  <service>/example/scene</service>
+  <pose_topic>/example/pose</pose_topic>
+  <deletion_topic>/example/delete</deletion_topic>
+  <scene_topic>/example/scene</scene_topic>
 </plugin>
 <!-- TODO(anyone) Support multiple scenes in the same window
   plugin filename="Scene3D">
