--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -123,5 +123,6 @@ add_subdirectory(scene3d)
 add_subdirectory(screenshot)
 add_subdirectory(topic_echo)
 add_subdirectory(topic_viewer)
+add_subdirectory(transport_scene_manager)
 add_subdirectory(world_control)
 add_subdirectory(world_stats)
