--- a/examples/config/scene3d.config
+++ b/examples/config/scene3d.config
@@ -16,6 +16,17 @@
     <camera_pose>-6 0 6 0 0.5 0</camera_pose>
 </plugin>
 <plugin filename="TransportSceneManager" name="Transport Scene Manager">
+  <ignition-gui>
+    <anchors target="3D View">
+      <line own="right" target="right"/>
+      <line own="top" target="top"/>
+    </anchors>
+    <property key="resizable" type="bool">false</property>
+    <property key="width" type="double">5</property>
+    <property key="height" type="double">5</property>
+    <property key="state" type="string">floating</property>
+    <property key="showTitleBar" type="bool">false</property>
+  </ignition-gui>
   <service>/example/scene</service>
   <pose_topic>/example/pose</pose_topic>
   <deletion_topic>/example/delete</deletion_topic>
