Example to populate the scene using transport
Signed-off-by: Louise Poubel <louise@openrobotics.org>

--- a/examples/config/scene3d.config
+++ b/examples/config/scene3d.config
@@ -9,7 +9,7 @@
       <title>View 1</title>
       <property type="string" key="state">docked</property>
     </ignition-gui>
-    <engine>ogre</engine>
+    <engine>ogre2</engine>
     <scene>scene</scene>
     <ambient_light>1 1 1</ambient_light>
     <background_color>0.8 0.8 0.8</background_color>
@@ -17,7 +17,7 @@
 </plugin>
 <plugin filename="TransportSceneManager" name="Transport Scene Manager">
   <ignition-gui>
-    <anchors target="3D View">
+    <anchors target="View 1">
       <line own="right" target="right"/>
       <line own="top" target="top"/>
     </anchors>
